Closed
Bug 797431
Opened 13 years ago
Closed 13 years ago
Black clipping on resize with lightweight theme installed
Categories
(Core :: Graphics, defect)
Tracking
()
RESOLVED
FIXED
mozilla19
People
(Reporter: rcampbell, Assigned: mattwoodrow)
References
Details
(Keywords: regression)
Attachments
(2 files, 1 obsolete file)
|
17.56 KB,
patch
|
roc
:
review+
|
Details | Diff | Splinter Review |
|
9.21 KB,
patch
|
roc
:
review+
|
Details | Diff | Splinter Review |
when resizing the browser with a lightweight theme applied, resizing is very slow to redraw, will not repaint toolbars at the bottom of the screen if made smaller until after resize is complete and will draw black clipped areas outside of content if the window is made larger.
OS X 10.8.2, nightly builds 2012-10-01 to 03.
Comment 1•13 years ago
|
||
Confirmed, this happens if-and-only-if you have a lightweight theme (personas) installed.
This is similar to a bug we've fixed before but I can't find the number.
Comment 2•13 years ago
|
||
What's the difference between a "lightweight" theme and a "regular" theme?
Please provide examples of both.
Comment 3•13 years ago
|
||
We renamed personas to lightweight theme because we're releasing something else as peronas. There is no regular theme, we just mean the old term for personas here.
Keywords: regression,
regressionwindow-wanted
Comment 4•13 years ago
|
||
Last good nightly: 2012-08-13
First bad nightly: 2012-08-14
Pushlog:
http://hg.mozilla.org/mozilla-central/pushloghtml?fromchange=f89feda9d997&tochange=22288130fea2
Looks like it caused by DLBI. We likely have to do a fix like in bug 782980. Matt can you take a look?
Depends on: 782980
Updated•13 years ago
|
Keywords: regressionwindow-wanted
| Assignee | ||
Comment 6•13 years ago
|
||
Oh right, that regression range doesn't include DBLI, just a bunch of preliminary work from a while ago.
This is more or less exactly the same as bug 782980.
The problem here is that we paint the same view twice, once for the titlebar, and once for the window. We set the 'force synchronous repaint' flag on resize, and it's used when painting the titlebar and cleared before we paint the window.
We need to make sure that the synchronous repaint happens for both paints of the view to get correct behaviour, not really sure what the best way to handle that is.
| Assignee | ||
Comment 7•13 years ago
|
||
Does this look like a reasonable approach?
Probably want to change the bool parameter crazyness into flags.
Attachment #670677 -
Flags: feedback?(roc)
Comment on attachment 670677 [details] [diff] [review]
Add alternate paint flags
Review of attachment 670677 [details] [diff] [review]:
-----------------------------------------------------------------
yes, flags, oh yes
Attachment #670677 -
Flags: feedback?(roc) → feedback+
| Assignee | ||
Comment 9•13 years ago
|
||
Attachment #671289 -
Flags: review?(roc)
| Assignee | ||
Comment 10•13 years ago
|
||
Attachment #670677 -
Attachment is obsolete: true
Attachment #671290 -
Flags: review?(roc)
| Assignee | ||
Comment 11•13 years ago
|
||
Attachment #671289 -
Flags: review?(roc) → review+
Attachment #671290 -
Flags: review?(roc) → review+
| Assignee | ||
Comment 12•13 years ago
|
||
https://hg.mozilla.org/integration/mozilla-inbound/rev/ab00790e8fed
https://hg.mozilla.org/integration/mozilla-inbound/rev/1bca31fd0e58
Assignee: nobody → matt.woodrow
Comment 13•13 years ago
|
||
https://hg.mozilla.org/mozilla-central/rev/ab00790e8fed
https://hg.mozilla.org/mozilla-central/rev/1bca31fd0e58
Status: NEW → RESOLVED
Closed: 13 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla19
You need to log in
before you can comment on or make changes to this bug.
Description
•