Bug 797431 - Add 'alternate paint' flag to PaintWindow, and don't clear ForcedRepaint on the view when it is set. r=roc