view/src/nsView.cpp
@@ -29,6 +29,7 @@ nsView::nsView(nsViewManager* aViewManager, nsViewVisibility aVisibility)
   mViewManager = aViewManager;
   mDirtyRegion = nullptr;
   mWidgetIsTopLevel = false;
+  mInAlternatePaint = false;
 }
 
 void nsView::DropMouseGrabbing()
@@ -1032,8 +1033,11 @@ nsView::WillPaintWindow(nsIWidget* aWidget, bool aWillSendDidPaint)
 bool
 nsView::PaintWindow(nsIWidget* aWidget, nsIntRegion aRegion, uint32_t aFlags)
 {
+  mInAlternatePaint = aFlags & PAINT_IS_ALTERNATE;
   nsCOMPtr<nsViewManager> vm = mViewManager;
-  return vm->PaintWindow(aWidget, aRegion, aFlags);
+  bool result = vm->PaintWindow(aWidget, aRegion, aFlags);
+  mInAlternatePaint = false;
+  return result;
 }
 
 void
